[package]
name = "thss-cryptography-rsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", rev = "refs/tags/text-editor" }
once_cell = "1.18.0"
rand = "0.8.5"
random-string = "1.0.1"
